sonar checks