@@ -6,9 +6,9 @@ package de.petanqueturniermanager.helper.sheet;
 
 import static com.google.common.base.Preconditions.checkNotNull;
 
-import java.util.HashMap;
+import java.text.MessageFormat;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.math.NumberUtils;
@@ -147,8 +147,7 @@ public class SheetHelper {
 			// must convert since XSpreadsheet is a named container
 			sheet = Lo.qi(XSpreadsheet.class, xSheetsIdx.getByIndex(index));
 		} catch (Exception e) {
-
-			System.out.println("Could not access spreadsheet: " + index);
+			logger.error(String.format("Could not access spreadsheet: %d", index));
 		}
 		return sheet;
 	}
@@ -167,11 +166,11 @@ public class SheetHelper {
 		List<String> sheetNamesNotToRemoveList = java.util.Arrays.asList(sheetNamesNotToRemove);
 
 		List<String> notToRemoveVorhanden = sheetNamesNotToRemoveList.stream()
-				.filter(shName -> findByName(shName) != null).collect(Collectors.toList());
+				.filter(shName -> findByName(shName) != null).toList();
 
 		// Mindestens ein Sheet muss stehen bleiben
 		if (notToRemoveVorhanden.isEmpty()) {
-			notToRemoveVorhanden = java.util.Arrays.asList(new String[] { "leer" });
+			notToRemoveVorhanden = java.util.Arrays.asList("leer");
 			newIfNotExist("leer", (short) 1);
 		}
 
@@ -225,7 +224,6 @@ public class SheetHelper {
 
 	public XSpreadsheets getSheets() {
 		checkNotNull(currentSpreadsheet, "currentSpreadsheet==null");
-		//		checkArgument(currentSpreadsheet.isPresent(), "currentSpreadsheet fehlt");
 		checkNotNull(currentSpreadsheet.getWorkingSpreadsheetDocument(), "WorkingSpreadsheetDocument==null");
 
 		return currentSpreadsheet.getWorkingSpreadsheetDocument().getSheets();
@@ -258,8 +256,7 @@ public class SheetHelper {
 	public XCell setValInCell(XSpreadsheet sheet, Position pos, NumberCellValue cellValue) {
 		checkNotNull(sheet);
 		checkNotNull(pos);
-		XCell xCell = setValInCell(sheet, pos, cellValue.getValue());
-		return xCell;
+		return setValInCell(sheet, pos, cellValue.getValue());
 	}
 
 	public XCell setFormulaInCell(StringCellValue stringVal) {
@@ -320,8 +317,6 @@ public class SheetHelper {
 
 		XCell xCell = null;
 		try {
-			// --- Get cell B3 by position - (column, row) ---
-			// xCell = xSheet.getCellByPosition(1, 2);
 			xCell = cellVal.getSheet().getCellByPosition(cellVal.getPos().getSpalte(), cellVal.getPos().getZeile());
 			handleAbstractCellValue(cellVal, xCell);
 		} catch (IndexOutOfBoundsException | IllegalArgumentException e) {
@@ -415,14 +410,9 @@ public class SheetHelper {
 
 		XCell xCell = null;
 		try {
-			// --- Get cell B3 by position - (column, row) ---
-			// xCell = xSheet.getCellByPosition(1, 2);
 			xCell = sheet.getCellByPosition(pos.getSpalte(), pos.getZeile());
 			XText xText = queryInterface(XText.class, xCell);
-			if (ueberschreiben) {
-				xText.setString(val);
-			} else if (StringUtils.isBlank(xText.getString())) {
-				// Checks if a CharSequence is empty (""), null or whitespace only.
+			if (ueberschreiben || StringUtils.isBlank(xText.getString())) {
 				xText.setString(val);
 			}
 		} catch (IndexOutOfBoundsException | IllegalArgumentException e) {
@@ -541,7 +531,7 @@ public class SheetHelper {
 	 * @param xSheet
 	 * @param color int val. convert from hex z.b. Integer.valueOf(0x003399), Integer.parseInt("003399", 16)
 	 */
-	@Deprecated
+	@Deprecated(since = "01.04.2023")
 	public void setTabColor(XSpreadsheet xSheet, int color) {
 		TurnierSheet.from(xSheet, currentSpreadsheet).tabColor(color);
 	}
@@ -650,15 +640,11 @@ public class SheetHelper {
 	}
 
 	public void setProperties(XPropertySet xPropSet, CellProperties properties) {
-		properties.forEach((key, value) -> {
-			setProperty(xPropSet, key, value);
-		});
+		properties.forEach((key, value) -> setProperty(xPropSet, key, value));
 	}
 
-	public void setProperties(XPropertySet xPropSet, HashMap<String, Object> properties) {
-		properties.forEach((key, value) -> {
-			setProperty(xPropSet, key, value);
-		});
+	public void setProperties(XPropertySet xPropSet, Map<String, Object> properties) {
+		properties.forEach((key, value) -> setProperty(xPropSet, key, value));
 	}
 
 	public void setProperty(XPropertySet xPropSet, String key, Object val) {
@@ -670,7 +656,7 @@ public class SheetHelper {
 			xPropSet.setPropertyValue(key, val);
 		} catch (IllegalArgumentException | UnknownPropertyException | PropertyVetoException
 				| WrappedTargetException e) {
-			logger.error("Property '" + key + "' = '" + val + "'\r" + e.getMessage(), e);
+			logger.error(MessageFormat.format("Property ''{0}'' = ''{1}''\r{2}", key, val, e.getMessage()), e);
 		}
 	}
 
@@ -717,20 +703,22 @@ public class SheetHelper {
 	/**
 	 * @return xcell, null whenn error or not found
 	 */
-	public XCell setPropertyInCell(XSpreadsheet sheet, Position pos, String Name, Object val) {
+	public XCell setPropertyInCell(XSpreadsheet sheet, Position pos, String name, Object val) {
 		checkNotNull(sheet);
 		checkNotNull(pos);
-		checkNotNull(Name);
+		checkNotNull(name);
 		checkNotNull(val);
 
 		XCell xCell = null;
 		try {
 			xCell = sheet.getCellByPosition(pos.getSpalte(), pos.getZeile());
 			XPropertySet xPropSet = Lo.qi(XPropertySet.class, xCell);
-			xPropSet.setPropertyValue(Name, val);
+			xPropSet.setPropertyValue(name, val);
 		} catch (IndexOutOfBoundsException | IllegalArgumentException | UnknownPropertyException | PropertyVetoException
 				| WrappedTargetException e) {
-			logger.error("\n***** Fehler beim Property in Zelle:" + Name + "=" + val + " *****\n" + e.getMessage(), e);
+			logger.error(
+					String.format("%n***** Fehler beim Property in Zelle:%s=%s *****%n%s", name, val, e.getMessage()),
+					e);
 		}
 		return xCell;
 	}
@@ -744,7 +732,7 @@ public class SheetHelper {
 	 *
 	 * @deprecated
 	 */
-	@Deprecated
+	@Deprecated(since = "01.40.2023")
 	public XPropertySet setColumnCellHoriJustify(XSpreadsheet sheet, int spalte, CellHoriJustify cellHoriJustify) {
 		checkNotNull(sheet);
 		// HoriJustify ,VertJustify ,Orientation
@@ -822,8 +810,6 @@ public class SheetHelper {
 		checkNotNull(text);
 		checkNotNull(xCell);
 
-		// XCell xCell = getCell( xSheet,pos);
-
 		// create the CellAddress struct
 		XCellAddressable xCellAddr = Lo.qi(XCellAddressable.class, xCell);
 		CellAddress aAddress = xCellAddr.getCellAddress();
@@ -832,10 +818,7 @@ public class SheetHelper {
 		XSheetAnnotationsSupplier xAnnotationsSupp = Lo.qi(XSheetAnnotationsSupplier.class, xSheet);
 		XSheetAnnotations xAnnotations = xAnnotationsSupp.getAnnotations();
 		xAnnotations.insertNew(aAddress, text);
-		// make the annotation visible
-		// XSheetAnnotationAnchor xAnnotAnchor = Lo.qi(XSheetAnnotationAnchor.class, xCell);
-		// XSheetAnnotation xAnnotation = xAnnotAnchor.getAnnotation();
-		// xAnnotation.setIsVisible(true);
+
 	}
 
 	/**
